<resources>
    <string name="app_name">TheAdmin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">Admin</string>
    <string name="title_activity_retry">Retry</string>
    <string name="permission_rationale" />

    <string name="hello_blank_fragment">Leaves fragment</string>
    <string name="apply">Apply Leave Here</string>
    <string name="Submit">Apply</string>
    <string name="from">From Date</string>
    <string name="to">To Date</string>
    <string name="reason">Enter reason for leave..</string>
    <string name="typeofleave" >Earned Leave</string>
    <string name="SERVER_DOMAIN" >https://phpmysql-mittu-spidey.c9users.io/TheAdmin/index.php/</string>


    <!-- Google maps debug key-->
    <string name="google_maps_key_debug" templateMergeStrategy="preserve" translatable="false">
        AIzaSyBN8qDqU63X_Ram_QQGfBtxpO1DMwH4dQk
    </string>
</resources>
