<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.yousee.theadmin.LeavesFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#d9dddf"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="#e8e8e7"
            android:orientation="horizontal" >

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply"
                android:textColor="#2582C5"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal|center_vertical"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView" >

        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical"
            >
            <EditText
                android:drawableRight="@drawable/calendar"
                android:id="@+id/fromdate"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:hint="@string/from"
                android:background="#f3f3f3"
                android:paddingLeft="5dp"
                android:layout_marginTop="30dp"/>

            <EditText
                android:drawableRight="@drawable/calendar"
                android:id="@+id/todate"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:hint="@string/to"
                android:background="#f3f3f3"
                android:paddingLeft="5dp"
                android:layout_marginTop="15dp"/>

            <EditText
                android:id="@+id/leaveType"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:text="@string/typeofleave"
                android:focusable="false"
                android:background="#f3f3f3"
                android:paddingLeft="5dp"
                android:layout_marginTop="15dp"
                />
            <EditText
                android:id="@+id/reason"
                android:layout_width="fill_parent"
                android:layout_height="140dp"
                android:hint="@string/reason"
                android:background="#f3f3f3"
                android:paddingLeft="5dp"
                android:layout_marginTop="15dp"/>
            <Button
                android:id="@+id/apply"
                android:layout_width="190dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:textColor="#2582C5"
                android:text="@string/Submit" />

        </LinearLayout>

        </ScrollView>

        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </LinearLayout>

</FrameLayout>
